# manus

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: io.rs  main.rs  templates.rs
tests/data/case1/: introduction.tex  main.tex
tests/data/case1/chapters/: conclusion.tex
tests/data/case2/: data.json  main.tex
tests/data/case3/: data.json  library.bib  main.tex
tests/data/case4/: data.toml  main.tex
tests/integration/: main.rs
