[package]
name = "manus"
version = "0.1.0"
authors = ["Erik Holmlund <erik-holmlund@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tectonic = "0.4.1"
handlebars = "*"
serde_json = "*"

[dependencies.clap]
version = "3.0.0-beta.2"
features = ["suggestions", "color"]

[dev-dependencies]
assert_approx_eq = "*"
assert_cmd = "0.10"
predicates = "1"
tempfile = "*"
